--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: host
+- hosts: localhost
   tasks:
   - name: Enable to install NGINX.
     shell: "amazon-linux-extras enable nginx1.12"
