--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,11 @@
 ---
 - hosts: localhost
   tasks:
+  - name: Stop service httpd, if started
+    service:
+      name: httpd
+      state: stopped
+
   - name: Enable to install NGINX.
     shell: "amazon-linux-extras enable nginx1"
     become: yes
